--- a/Functional Programming in CSharp/FunctionalProgrammingExercises4/Database/Repository.csproj
+++ b/Functional Programming in CSharp/FunctionalProgrammingExercises4/Database/Repository.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="LaYumba.Functional" Version="0.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0-preview.1.21102.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0-preview.1.21102.2">
       <PrivateAssets>all</PrivateAssets>
